environments/dev/vpc.tf
resource "aws_vpc" "vpc" {
    assign_generated_ipv6_cidr_block = false
    cidr_block                       = "10.0.0.0/16"
    enable_dns_hostnames             = true
    enable_dns_support               = true
    instance_tenancy                 = "default"
    tags                             = {
        "Name" = "sbcntrVpc"
    }
    tags_all                         = {
        "Name" = "sbcntrVpc"
    }
}
